# sotu

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: build-validate.yml  ci.yml  release.yml
data/: sotu_type_overrides.csv
docs/: CONTRIBUTING.md
docs/design-plans/: 2026-05-20-audit-round-3.md  2026-05-20-audit-round-4-prompt.md  2026-05-20-dh-oz-sotu.md  2026-05-21-audit-round-4.md
raw/ucsb/: 7th-annual-message.html  8th-annual-message.html  address-administration-goals-before-joint-session-congress.html  address-before-joint-session-congress-administration-goals.html  address-before-joint-session-congress-the-state-the-union-0.html  address-before-joint-session-congress-the-state-the-union-1.html  address-before-joint-session-congress-the-state-the-union-2.html  address-before-joint-session-congress-the-state-the-union.html  address-before-joint-session-the-congress-1.html  address-before-joint-session-the-congress-2.html  address-before-joint-session-the-congress-3.html  address-before-joint-session-the-congress-4.html  address-before-joint-session-the-congress-administration-goals.html  address-before-joint-session-the-congress-reporting-the-state-the-union-0.html  address-before-joint-session-the-congress-reporting-the-state-the-union-1.html  address-before-joint-session-the-congress-reporting-the-state-the-union-2.html  address-before-joint-session-the-congress-reporting-the-state-the-union.html  address-before-joint-session-the-congress-the-program-for-economic-recovery-0.html  address-before-joint-session-the-congress-the-state-the-union-0.html  address-before-joint-session-the-congress-the-state-the-union-1.html  address-before-joint-session-the-congress-the-state-the-union-10.html  address-before-joint-session-the-congress-the-state-the-union-11.html  address-before-joint-session-the-congress-the-state-the-union-12.html  address-before-joint-session-the-congress-the-state-the-union-13.html  address-before-joint-session-the-congress-the-state-the-union-14.html  (+231 more)
tests/: test_classify.py  test_coverage.py  test_discover.py  test_fetch.py  test_manifest.py  test_parse.py  test_public_api.py  test_roundtrip.py  test_schema.py  test_validate.py
tools/: build.py  classify.py  discover.py  fetch.py  parse.py  validate.py
(+137 files in other folders)
